--- a/package.json
+++ b/package.json
@@ -1,23 +1,33 @@
 {
   "name": "react-style-js",
   "version": "1.0.0",
-  "description": "simple react style script generator",
+  "description": "a simple wrapper to eliminate the gap between style and script",
   "main": "index.js",
-  "scripts": {
-    "test": "mocha --compilers js:babel/register",
-    "build": "babel ./lib/index.js -o ./index.js"
+  "devDependencies": {
+    "react": "^0.13.3",
+    "babel": "^5.3.1"
+    "mocha": "^2.2.4"
   },
   "peerDependencies": {
     "react": "0.13.x"
   },
+  "scripts": {
+    "test": "mocha --compilers js:babel/register",
+    "build": "babel ./lib/index.js -o ./index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ssnau/react-style-js.git"
+  },
   "keywords": [
-    "stylejs"
+    "style",
+    "script",
+    "react"
   ],
   "author": "ssnau",
   "license": "MIT",
-  "devDependencies": {
-    "babel": "^5.3.1",
-    "mocha": "^2.2.4",
-    "react": "^0.13.3"
-  }
+  "bugs": {
+    "url": "https://github.com/ssnau/react-style-js/issues"
+  },
+  "homepage": "https://github.com/ssnau/react-style-js"
 }
