--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "a simple wrapper to eliminate the gap between style and script",
   "main": "index.js",
   "devDependencies": {
-    "babel": "^5.3.1"
+    "babel": "^5.3.1",
     "mocha": "^2.2.4"
   },
   "peerDependencies": {
