--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "mocha": "^2.2.4"
   },
   "peerDependencies": {
-    "react": "0.13.x"
+    "react": ">0.13.x"
   },
   "scripts": {
     "test": "mocha --compilers js:babel/register",
